fix(journey-tabs): new names and small twitter container for tweet overflow

--- a/src/components/TwitterChatter/_twitterchatter.scss
+++ b/src/components/TwitterChatter/_twitterchatter.scss
@@ -1,9 +1,18 @@
+.tweet__list.bx--list--unordered {
+  max-height: 225px;
+  overflow: scroll;
+}
+
 .tweet__list > ul:nth-child(1) {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.125rem;
   letter-spacing: 0.16px;
   list-style: none;
+}
+
+.tweets ul.cv-list.bx--list--unordered li.cv-list-item.bx--list__item {
+  color: white;
 }
 
 .tweets > * {
